--- a/PythonMoora/Sorting_Soal_Tes.ipynb
+++ b/PythonMoora/Sorting_Soal_Tes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<QuerySet [<User: admin>, <User: yunuslon97@gmail.com>, <User: satria@gmail.com>, <User: gora@gmail.com>, <User: sagita@gmail.com>, <User: st>, <User: yunus12355@gmail.com>, <User: tonho>]>"
+       "<QuerySet [<User: admin>, <User: gora@gmail.com>, <User: sagita@gmail.com>, <User: satria@gmail.com>, <User: azura@gmail.com>, <User: afriani@gmail.com>, <User: reza@gmail.com>, <User: dio@gmail.com>, <User: desak@gmail.com>, <User: binazir@gmail.com>, <User: made@gmail.com>]>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,6 +35,127 @@
     "user = User.objects.all()\n",
     "user"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>auth.Permission.None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      id\n",
+       "0   auth.Permission.None\n",
+       "1   auth.Permission.None\n",
+       "2   auth.Permission.None\n",
+       "3   auth.Permission.None\n",
+       "4   auth.Permission.None\n",
+       "5   auth.Permission.None\n",
+       "6   auth.Permission.None\n",
+       "7   auth.Permission.None\n",
+       "8   auth.Permission.None\n",
+       "9   auth.Permission.None\n",
+       "10  auth.Permission.None"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ListDatauser(user):\n",
+    "    us=User.objects.all()\n",
+    "    if len(us)>0:\n",
+    "        cols = ['id']\n",
+    "        dt ={\n",
+    "            cols[0] : [str(a.user_permissions) for a in us],\n",
+    "            \n",
+    "        }\n",
+    "        dfdata_siswa = pd.DataFrame(data=dt)\n",
+    "        return dfdata_siswa\n",
+    "    else:\n",
+    "        return[]\n",
+    "ListDatauser(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
