--- a/PythonMoora/Sorting_Soal_Tes.ipynb
+++ b/PythonMoora/Sorting_Soal_Tes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,30 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<QuerySet [<User: admin>, <User: gora@gmail.com>, <User: sagita@gmail.com>, <User: satria@gmail.com>, <User: azura@gmail.com>, <User: afriani@gmail.com>, <User: reza@gmail.com>, <User: dio@gmail.com>, <User: desak@gmail.com>, <User: binazir@gmail.com>, <User: made@gmail.com>]>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tp =TesOlimpiade.objects.all()\n",
     "sw = Siswa.objects.all()\n",
     "user = User.objects.all()\n",
-    "user"
+    "ht = HasilTes.objects.all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -68,68 +57,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>gora@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>sagita@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>satria@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>azura@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>afriani@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>reza@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>dio@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>desak@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>binazir@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>made@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>auth.Permission.None</td>\n",
+       "      <td>admin1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>yunuslon@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      id\n",
-       "0   auth.Permission.None\n",
-       "1   auth.Permission.None\n",
-       "2   auth.Permission.None\n",
-       "3   auth.Permission.None\n",
-       "4   auth.Permission.None\n",
-       "5   auth.Permission.None\n",
-       "6   auth.Permission.None\n",
-       "7   auth.Permission.None\n",
-       "8   auth.Permission.None\n",
-       "9   auth.Permission.None\n",
-       "10  auth.Permission.None"
+       "                    id\n",
+       "0       gora@gmail.com\n",
+       "1     sagita@gmail.com\n",
+       "2     satria@gmail.com\n",
+       "3      azura@gmail.com\n",
+       "4    afriani@gmail.com\n",
+       "5       reza@gmail.com\n",
+       "6        dio@gmail.com\n",
+       "7      desak@gmail.com\n",
+       "8    binazir@gmail.com\n",
+       "9       made@gmail.com\n",
+       "10              admin1\n",
+       "11  yunuslon@gmail.com"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +134,7 @@
     "    if len(us)>0:\n",
     "        cols = ['id']\n",
     "        dt ={\n",
-    "            cols[0] : [str(a.user_permissions) for a in us],\n",
+    "            cols[0] : [str(a.username) for a in us],\n",
     "            \n",
     "        }\n",
     "        dfdata_siswa = pd.DataFrame(data=dt)\n",
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -197,29 +191,167 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "      <td>yunuslon97@gmail.com</td>\n",
-       "      <td>yunus</td>\n",
-       "      <td>Ampenan</td>\n",
+       "      <td>2</td>\n",
+       "      <td>gora@gmail.com</td>\n",
+       "      <td>Gora Wahyu</td>\n",
+       "      <td>Taman Baru</td>\n",
        "      <td>biologi</td>\n",
        "      <td>90</td>\n",
        "      <td>2 SMA</td>\n",
        "      <td>Baik</td>\n",
-       "      <td>Sering</td>\n",
+       "      <td>Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>sagita@gmail.com</td>\n",
+       "      <td>Sagita Putri</td>\n",
+       "      <td>Pabutan Permai</td>\n",
+       "      <td>biologi</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3 SMA</td>\n",
+       "      <td>Baik</td>\n",
+       "      <td>Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>satria@gmail.com</td>\n",
+       "      <td>Satria Wira</td>\n",
+       "      <td>Moncok</td>\n",
+       "      <td>biologi</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3 SMA</td>\n",
+       "      <td>Baik</td>\n",
+       "      <td>Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12</td>\n",
+       "      <td>azura@gmail.com</td>\n",
+       "      <td>Azura fransisca</td>\n",
+       "      <td>Perumnas</td>\n",
+       "      <td>biologi</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1 SMA</td>\n",
+       "      <td>Cukup Baik</td>\n",
+       "      <td>Cukup Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13</td>\n",
+       "      <td>afriani@gmail.com</td>\n",
+       "      <td>Afriani Ibrahim Putri</td>\n",
+       "      <td>Taman sari</td>\n",
+       "      <td>biologi</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2 SMA</td>\n",
+       "      <td>Baik</td>\n",
+       "      <td>Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>14</td>\n",
+       "      <td>reza@gmail.com</td>\n",
+       "      <td>Reza Rahmanto</td>\n",
+       "      <td>Pondok Perasi</td>\n",
+       "      <td>fisika</td>\n",
+       "      <td>90</td>\n",
+       "      <td>2 SMA</td>\n",
+       "      <td>Baik</td>\n",
+       "      <td>Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>15</td>\n",
+       "      <td>dio@gmail.com</td>\n",
+       "      <td>Oktadio Erikardo</td>\n",
+       "      <td>Taman Baru</td>\n",
+       "      <td>fisika</td>\n",
+       "      <td>87</td>\n",
+       "      <td>3 SMA</td>\n",
+       "      <td>Baik</td>\n",
+       "      <td>Cukup Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>16</td>\n",
+       "      <td>desak@gmail.com</td>\n",
+       "      <td>I Desak Puspita Sari</td>\n",
+       "      <td>Gebang</td>\n",
+       "      <td>fisika</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1 SMA</td>\n",
+       "      <td>Baik</td>\n",
+       "      <td>Cukup Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>17</td>\n",
+       "      <td>binazir@gmail.com</td>\n",
+       "      <td>Binazir silvia</td>\n",
+       "      <td>Pejeruk Bangket</td>\n",
+       "      <td>fisika</td>\n",
+       "      <td>86</td>\n",
+       "      <td>3 SMA</td>\n",
+       "      <td>Cukup Baik</td>\n",
+       "      <td>Cukup Sering Mengikuti Olimpiade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>18</td>\n",
+       "      <td>made@gmail.com</td>\n",
+       "      <td>I MadeRandiawan</td>\n",
+       "      <td>Monjok</td>\n",
+       "      <td>fisika</td>\n",
+       "      <td>90</td>\n",
+       "      <td>2 SMA</td>\n",
+       "      <td>Cukup Baik</td>\n",
+       "      <td>Jarang Mengikuti Olimpiade</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id              username  siswa   alamat mata_pelajaran  nilai_akademik  \\\n",
-       "0   7  yunuslon97@gmail.com  yunus  Ampenan        biologi              90   \n",
+       "   id           username                  siswa           alamat  \\\n",
+       "0   2     gora@gmail.com             Gora Wahyu       Taman Baru   \n",
+       "1   3   sagita@gmail.com           Sagita Putri   Pabutan Permai   \n",
+       "2   4   satria@gmail.com            Satria Wira           Moncok   \n",
+       "3  12    azura@gmail.com        Azura fransisca         Perumnas   \n",
+       "4  13  afriani@gmail.com  Afriani Ibrahim Putri       Taman sari   \n",
+       "5  14     reza@gmail.com          Reza Rahmanto    Pondok Perasi   \n",
+       "6  15      dio@gmail.com       Oktadio Erikardo       Taman Baru   \n",
+       "7  16    desak@gmail.com   I Desak Puspita Sari           Gebang   \n",
+       "8  17  binazir@gmail.com         Binazir silvia  Pejeruk Bangket   \n",
+       "9  18     made@gmail.com        I MadeRandiawan           Monjok   \n",
        "\n",
-       "  jenjang sikap intensitas  \n",
-       "0   2 SMA  Baik     Sering  "
+       "  mata_pelajaran  nilai_akademik jenjang       sikap  \\\n",
+       "0        biologi              90   2 SMA        Baik   \n",
+       "1        biologi              90   3 SMA        Baik   \n",
+       "2        biologi              90   3 SMA        Baik   \n",
+       "3        biologi              87   1 SMA  Cukup Baik   \n",
+       "4        biologi              88   2 SMA        Baik   \n",
+       "5         fisika              90   2 SMA        Baik   \n",
+       "6         fisika              87   3 SMA        Baik   \n",
+       "7         fisika              89   1 SMA        Baik   \n",
+       "8         fisika              86   3 SMA  Cukup Baik   \n",
+       "9         fisika              90   2 SMA  Cukup Baik   \n",
+       "\n",
+       "                         intensitas  \n",
+       "0        Sering Mengikuti Olimpiade  \n",
+       "1        Sering Mengikuti Olimpiade  \n",
+       "2        Sering Mengikuti Olimpiade  \n",
+       "3  Cukup Sering Mengikuti Olimpiade  \n",
+       "4        Sering Mengikuti Olimpiade  \n",
+       "5        Sering Mengikuti Olimpiade  \n",
+       "6  Cukup Sering Mengikuti Olimpiade  \n",
+       "7  Cukup Sering Mengikuti Olimpiade  \n",
+       "8  Cukup Sering Mengikuti Olimpiade  \n",
+       "9        Jarang Mengikuti Olimpiade  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
