--- a/PythonMoora/Sorting_Soal_Tes.ipynb
+++ b/PythonMoora/Sorting_Soal_Tes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -57,91 +57,81 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>gora@gmail.com</td>\n",
+       "      <td>2018-11-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>sagita@gmail.com</td>\n",
+       "      <td>2018-11-19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>satria@gmail.com</td>\n",
+       "      <td>2018-11-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>azura@gmail.com</td>\n",
+       "      <td>2001-03-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>afriani@gmail.com</td>\n",
+       "      <td>1999-11-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>reza@gmail.com</td>\n",
+       "      <td>2000-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>dio@gmail.com</td>\n",
+       "      <td>1999-10-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>desak@gmail.com</td>\n",
+       "      <td>2000-06-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>binazir@gmail.com</td>\n",
+       "      <td>1998-08-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>made@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>admin1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>yunuslon@gmail.com</td>\n",
+       "      <td>2000-10-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    id\n",
-       "0       gora@gmail.com\n",
-       "1     sagita@gmail.com\n",
-       "2     satria@gmail.com\n",
-       "3      azura@gmail.com\n",
-       "4    afriani@gmail.com\n",
-       "5       reza@gmail.com\n",
-       "6        dio@gmail.com\n",
-       "7      desak@gmail.com\n",
-       "8    binazir@gmail.com\n",
-       "9       made@gmail.com\n",
-       "10              admin1\n",
-       "11  yunuslon@gmail.com"
+       "           id\n",
+       "0  2018-11-04\n",
+       "1  2018-11-19\n",
+       "2  2018-11-12\n",
+       "3  2001-03-14\n",
+       "4  1999-11-10\n",
+       "5  2000-07-13\n",
+       "6  1999-10-08\n",
+       "7  2000-06-06\n",
+       "8  1998-08-14\n",
+       "9  2000-10-25"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def ListDatauser(user):\n",
-    "    us=User.objects.all()\n",
-    "    if len(us)>0:\n",
+    "def ListDatauser(sw):\n",
+    "#     us=User.objects.all()\n",
+    "    if len(sw)>0:\n",
     "        cols = ['id']\n",
     "        dt ={\n",
-    "            cols[0] : [str(a.username) for a in us],\n",
+    "            cols[0] : [str(a.tanggal_lahir) for a in sw],\n",
     "            \n",
     "        }\n",
     "        dfdata_siswa = pd.DataFrame(data=dt)\n",
     "        return dfdata_siswa\n",
     "    else:\n",
     "        return[]\n",
-    "ListDatauser(user)"
+    "ListDatauser(sw)"
    ]
   },
   {
